# hcaptcha-solver-rest-api

./: Cargo.toml  README.md  Shuttle.toml  build.rs
src/: clean_prompt.rs  get_data.rs  index.html  index.html.template  main.rs  solve.rs
