[package]
name = "hcaptcha-solver-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cached = { version = "0.42.0", features = ["async_tokio_rt_multi_thread"] }
ort = "1.14.3"
reqwest = "0.11.16"
serde = { version = "1.0.159", features = ["serde_derive"] }
serde_yaml = "0.9.19"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
